# cappella

./: .prettierignore  .prettierrc.json  LICENSE  README.md  package.json  pnpm-lock.yaml
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  frontend.rs  frontend_pipe.rs  gstreamer.rs  lib.rs  local.rs  local_app_handle.rs  local_gstreamer.rs  local_gstreamer_message.rs  local_gstreamer_pipeline.rs  main.rs  my_app_handle.rs  player.rs  player_state.rs  player_task.rs  streamer.rs  streamer_loop.rs  streamer_pipe.rs  streamer_thread.rs  tauri.rs  utils.rs
src-tauri/src/frontend/: frontend_message.rs  frontend_pipe.rs  message.rs  pipe.rs
src-tauri/src/gstreamer/: gstreamer.rs  gstreamer_bus.rs  gstreamer_data.rs  gstreamer_message.rs  gstreamer_pipe.rs  gstreamer_pipeline.rs  gstreamer_thread.rs
src-tauri/src/local/: app_error.rs  mutex_lock_timeout.rs  state.rs
src-tauri/src/player/: front.rs  player.rs  player_front.rs  streamer.rs  streamer_loop.rs  streamer_pipe.rs
src-tauri/src/streamer/: bus.rs  front.rs  loop_.rs  message.rs  pipe.rs  streamer_loop.rs  sys.rs
src-tauri/src/streamer/sys/: bus.rs  element.rs  gstreamer.rs  message.rs  state.rs  structure.rs  structure_field.rs
src-tauri/src/tauri/: local_state.rs  tauri_app_handle.rs  tauri_state.rs
src-tauri/src/utils/: cstring_converter.rs  pointer.rs
