[package]
name = "cappella"
version = "0.0.0"
description = "A music player"
authors = ["Tabinol"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "cappella_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
gstreamer = "0.22.3"
gstreamer-sys = { version = "0.22.2", features = ["v1_18_3"] }
tauri-plugin-shell = "2.0.0-beta.7"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
